--- a/github/workflows/test.yml
+++ b/github/workflows/test.yml
@@ -11,5 +11,5 @@ jobs:
              uses: actions/checkout@v3
              run: |
               mkdir bb
-              new-item making-cash.txt
+              new-item "making-cash.txt"
               echo "Devops Eng" > making-cash.txt
